syntax = "proto3";

package goservice;
option go_package = "github.com/isalikov/goservice/pkg/service";

service GoService {
    rpc ServiceMethod(ServiceMethodRequest) returns (ServiceMethodResponse) {}
}

message ServiceMethodRequest {
    string message = 1;
}

message ServiceMethodResponse {
    string message = 1;
}
